--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<meta name="author" content="ThemeStarz">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,500,600">
-    <link rel="stylesheet" href="brandbar-ir/csoon/assets/bootstrap/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="brandbar-ir/csoon/assets/font-awesome/css/fontawesome-all.min.css">
-    <link rel="stylesheet" href="brandbar-ir/csoon/assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="brandbar-ir/csoon/assets/css/style.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="assets/font-awesome/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 	<title>CryptoSoon - Coming Soon Template</title>
 
 </head>
@@ -26,7 +26,7 @@
             <header id="header">
                 <nav class="navbar navbar-light ts-separate-bg-element">
                     <a class="navbar-brand" href="#">
-                        <img src="brandbar-ir/csoon/assets/img/logo-b.png" alt="">
+                        <img src="assets/img/logo-b.png" alt="">
                     </a>
                     <!--end navbar-brand-->
                     <button class="navbar-toggler ts-open-side-panel" type="button" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse viverra lectus neque.
                             </p>
-                            <form class="ts-form ts-form-email" data-php-path="brandbar-ir/csoon/assets/php/email.php">
+                            <form class="ts-form ts-form-email" data-php-path="assets/php/email.php">
                                 <div class="row">
                                     <div class="col-md-9">
                                         <div class="form-group">
@@ -137,7 +137,7 @@
                     <div class="col-sm-6 col-xl-4">
                         <div class="d-flex align-items-center my-3">
                             <div class="ts-circle__md">
-                                <figure class="ts-background-image" data-bg-image="brandbar-ir/csoon/assets/img/person-01.jpg"></figure>
+                                <figure class="ts-background-image" data-bg-image="assets/img/person-01.jpg"></figure>
                             </div>
                             <div class="ml-3">
                                 <h3 class="mb-0">Jane Doe</h3>
@@ -150,7 +150,7 @@
                     <div class="col-sm-6 col-xl-4">
                         <div class="d-flex align-items-center my-3">
                             <div class="ts-circle__md">
-                                <figure class="ts-background-image" data-bg-image="brandbar-ir/csoon/assets/img/person-02.jpg"></figure>
+                                <figure class="ts-background-image" data-bg-image="assets/img/person-02.jpg"></figure>
                             </div>
                             <div class="ml-3">
                                 <h3 class="mb-0">Peter Browns</h3>
@@ -163,7 +163,7 @@
                     <div class="col-sm-6 col-xl-4">
                         <div class="d-flex align-items-center my-3">
                             <div class="ts-circle__md">
-                                <figure class="ts-background-image" data-bg-image="brandbar-ir/csoon/assets/img/person-04.jpg"></figure>
+                                <figure class="ts-background-image" data-bg-image="assets/img/person-04.jpg"></figure>
                             </div>
                             <div class="ml-3">
                                 <h3 class="mb-0">Susane Erwing</h3>
@@ -184,7 +184,7 @@
                 <!--end ts-title-->
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="brandbar-ir/csoon/assets/img/icon-wallet-b.png" alt="" class="mw-100 mb-4">
+                        <img src="assets/img/icon-wallet-b.png" alt="" class="mw-100 mb-4">
                         <h3>Easy Payments</h3>
                         <p>
                             Aenean ut orci mattis, rhoncus velit interdum, molestie mi
@@ -192,7 +192,7 @@
                     </div>
                     <!--end col-md-4-->
                     <div class="col-md-4">
-                        <img src="brandbar-ir/csoon/assets/img/icon-cloud-b.png" alt="" class="mw-100 mb-4">
+                        <img src="assets/img/icon-cloud-b.png" alt="" class="mw-100 mb-4">
                         <h3>Secure Cloud</h3>
                         <p>
                             Uis commodo arcu at egestas vehicula. Maecenas auctor
@@ -200,7 +200,7 @@
                     </div>
                     <!--end col-md-4-->
                     <div class="col-md-4">
-                        <img src="brandbar-ir/csoon/assets/img/icon-laptop-b.png" alt="" class="mw-100 mb-4">
+                        <img src="assets/img/icon-laptop-b.png" alt="" class="mw-100 mb-4">
                         <h3>Responsive</h3>
                         <p>
                             Integer tempus interdum felis, ut luctus nunc.
@@ -258,7 +258,7 @@
                     <!--end col-xl-4-->
                     <div class="col-xl-8">
                         <h3>Contact Form</h3>
-                        <form id="form-contact" class="ts-form ts-form-email ts-inputs__transparent" data-php-path="brandbar-ir/csoon/assets/php/email.php">
+                        <form id="form-contact" class="ts-form ts-form-email ts-inputs__transparent" data-php-path="assets/php/email.php">
                             <div class="row">
                                 <div class="col-md-6 col-sm-6">
                                     <div class="form-group">
@@ -308,25 +308,25 @@
     <!--************ JS SCRIPTS *************************************************************************************-->
     <!--*************************************************************************************************************-->
 
-	<script src="brandbar-ir/csoon/assets/js/jquery-3.3.1.min.js"></script>
-	<script src="brandbar-ir/csoon/assets/js/popper.min.js"></script>
-	<script src="brandbar-ir/csson/assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="brandbar-ir/csoon/assets/js/imagesloaded.pkgd.min.js"></script>
+	<script src="assets/js/jquery-3.3.1.min.js"></script>
+	<script src="assets/js/popper.min.js"></script>
+	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyBEDfNcQRmKQEyulDN8nGWjLYPm8s4YB58"></script>
-    <script src="brandbar-ir/csoon/assets/js/waterpipe.js"></script>
-    <script src="brandbar-ir/csoon/assets/js/jquery.magnific-popup.min.js"></script>
-	<script src="brandbar-ir/csoon/assets/js/jquery.countdown.min.js"></script>
-	<script src="brandbar-ir/csoon/assets/js/jquery.validate.min.js"></script>
-	<script src="brandbar-ir/csoon/assets/js/jquery-validate.bootstrap-tooltip.min.js"></script>
+    <script src="assets/js/waterpipe.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+	<script src="assets/js/jquery.countdown.min.js"></script>
+	<script src="assets/js/jquery.validate.min.js"></script>
+	<script src="assets/js/jquery-validate.bootstrap-tooltip.min.js"></script>
 
-    <script src="brandbar-ir/csoon/assets/js/custom.js"></script>
+    <script src="assets/js/custom.js"></script>
 
     <!--Google map-->
 
     <script>
         var latitude = 34.038405;
         var longitude = -117.946944;
-        var markerImage = "brandbar-ir/csoon/assets/img/map-marker.png";
+        var markerImage = "assets/img/map-marker.png";
         var mapElement = "map";
         var mapStyle = [{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#444444"}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#f2f2f2"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"poi","elementType":"labels.text","stylers":[{"visibility":"off"}]},{"featureType":"road","elementType":"all","stylers":[{"saturation":-100},{"lightness":45}]},{"featureType":"road.highway","elementType":"all","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#dbdbdb"},{"visibility":"on"}]}];
         google.maps.event.addDomListener(window, 'load', simpleMap(latitude, longitude, markerImage, mapStyle, mapElement));
